[gd_scene load_steps=7 format=3 uid="uid://cbaiyt7ovkx6v"]

[ext_resource type="Texture2D" uid="uid://cmfleiy12en2l" path="res://asset/crosshair1.png" id="1_5ro6f"]
[ext_resource type="Script" path="res://map/install_location1.gd" id="1_c2176"]
[ext_resource type="PackedScene" uid="uid://bvmhxpoiv20nv" path="res://turret/tower_panel1-1.tscn" id="3_svjhh"]
[ext_resource type="PackedScene" uid="uid://dnglroqdakb7p" path="res://turret/tower_panel1-2.tscn" id="4_8ve54"]
[ext_resource type="PackedScene" uid="uid://cc2sv8iljx1em" path="res://turret/tower_panel1-3.tscn" id="5_6r4it"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_67jps"]
draw_center = false

[node name="installLocation1" type="Panel"]
offset_top = 1.0
offset_right = 86.0
offset_bottom = 78.0
theme_override_styles/panel = SubResource("StyleBoxFlat_67jps")
script = ExtResource("1_c2176")

[node name="crosshair1" type="Sprite2D" parent="."]
position = Vector2(43, 41)
texture = ExtResource("1_5ro6f")

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]

[node name="hbox" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_left = -41.0
offset_top = 94.0
offset_right = 129.0
offset_bottom = 161.0
alignment = 1

[node name="towerPanel1-1" parent="hbox" instance=ExtResource("3_svjhh")]
layout_mode = 2

[node name="towerPanel1-2" parent="hbox" instance=ExtResource("4_8ve54")]
layout_mode = 2

[node name="towerPanel1-3" parent="hbox" instance=ExtResource("5_6r4it")]
layout_mode = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
